--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8f7fc">
+  <meta name="theme-color" content="#1A1A2E">
   <title>Commercial Mentoring | Oney & Co</title>
   <meta name="description" content="1 more commercial deal a year. Learn to think like a banker with Oney & Co's Deal Triage™ tool and 1-on-1 commercial mentoring for mortgage brokers.">
   <link rel="canonical" href="https://mentor.oneyco.com.au/">
@@ -16,18 +16,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #f8f7fc;
-      --bg-secondary: #efedf5;
-      --card: #ffffff;
-      --border: #e2dff0;
-      --accent: #6B4C9A;
-      --accent-light: #7C5DB0;
-      --accent-lighter: #9B72D0;
-      --accent-glow: rgba(107, 76, 154, 0.08);
+      --bg: #1A1A2E;
+      --bg-secondary: #16162A;
+      --card: #252540;
+      --border: #3D3D5C;
+      --accent: #9B59B6;
+      --accent-light: #B08AE0;
+      --accent-lighter: #C4A3F0;
+      --accent-glow: rgba(155, 114, 208, 0.12);
       --green: #2ECC85;
       --green-dark: #1FAD73;
-      --text: #1a1a2e;
-      --text-muted: #6b6b8a;
+      --text: #ffffff;
+      --text-muted: #a3a3b8;
       --success: #22c55e;
       --warning: #f59e0b;
       --danger: #ef4444;
@@ -35,27 +35,6 @@
       --purple-gradient: linear-gradient(135deg, #6B4C9A, #9B59B6);
       --green-gradient: linear-gradient(135deg, #2ECC85, #1FAD73);
     }
-    [data-theme="dark"] {
-      --bg: #0a0a0a;
-      --bg-secondary: #111111;
-      --card: #1a1a1a;
-      --border: #2a2a3e;
-      --accent: #9B72D0;
-      --accent-light: #B08AE0;
-      --accent-lighter: #C4A3F0;
-      --accent-glow: rgba(155, 114, 208, 0.12);
-      --text: #f0eef5;
-      --text-muted: #9090aa;
-      --purple-gradient: linear-gradient(135deg, #9B72D0, #B08AE0);
-    }
-    [data-theme="dark"] .option-card:hover { background: rgba(155, 114, 208, 0.06); }
-    [data-theme="dark"] .option-card.selected { background: rgba(155, 114, 208, 0.08); box-shadow: 0 0 0 3px rgba(155, 114, 208, 0.15); }
-    [data-theme="dark"] .result-card, [data-theme="dark"] .package-card { box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
-    [data-theme="dark"] .hero-section h1 { -webkit-text-fill-color: transparent; }
-    [data-theme="dark"] .section-title { -webkit-text-fill-color: transparent; }
-    [data-theme="dark"] .problem-card { background: var(--bg-secondary); }
-    [data-theme="dark"] .learn-item { background: var(--bg-secondary); }
-
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html { scroll-behavior: smooth; }
     body {
@@ -77,6 +56,13 @@
     .top-bar-logo { display: flex; align-items: center; gap: 10px; text-decoration: none; }
     .top-bar-logo svg { height: 36px; width: auto; }
 
+    
+    .nav-links { display:flex;align-items:center;gap:20px;list-style:none; }
+    .nav-links a { color:var(--text-muted);text-decoration:none;font-size:13px;font-weight:500;transition:color 0.2s; }
+    .nav-links a:hover { color:var(--accent); }
+    .nav-links a.nav-active { color:var(--accent); }
+    @media(max-width:768px){.nav-links{display:none;}}
+
     /* Hero */
     .hero-section {
       text-align: center; padding: 80px 20px 60px; max-width: 800px; margin: 0 auto;
@@ -87,8 +73,7 @@
     }
     .hero-section h1 {
       font-size: 44px; font-weight: 800; line-height: 1.15; margin-bottom: 16px;
-      background: var(--purple-gradient); -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent; background-clip: text;
+      background: var(--purple-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;
     }
     .hero-section .subtitle {
       font-size: 20px; color: var(--text-muted); margin-bottom: 24px; max-width: 560px; margin-left: auto; margin-right: auto;
@@ -108,8 +93,7 @@
     .section { padding: 60px 0; }
     .section-title {
       font-size: 28px; font-weight: 800; margin-bottom: 12px; text-align: center;
-      background: var(--purple-gradient); -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent; background-clip: text;
+      background: var(--purple-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;
     }
     .section-subtitle { text-align: center; color: var(--text-muted); font-size: 16px; margin-bottom: 40px; max-width: 560px; margin-left: auto; margin-right: auto; }
 
@@ -285,26 +269,25 @@
   <!-- Top Bar -->
   <div class="top-bar">
     <a href="https://oneyco.com.au" class="top-bar-logo">
-      <svg viewBox="0 0 180 80" xmlns="http://www.w3.org/2000/svg" style="width:120px;height:auto;">
-        <defs>
-          <linearGradient id="logoGreenGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-            <stop offset="0%" style="stop-color:#2ECC85"/><stop offset="100%" style="stop-color:#1FAD73"/>
-          </linearGradient>
-          <linearGradient id="logoPurpleAccent" x1="0%" y1="0%" x2="100%" y2="0%">
-            <stop offset="0%" style="stop-color:#6B4C9A"/><stop offset="100%" style="stop-color:#9B59B6"/>
-          </linearGradient>
-        </defs>
-        <g transform="translate(35, 40)">
-          <path d="M 0 -30 A 30 30 0 1 0 0 -29.99" fill="none" stroke="url(#logoGreenGrad)" stroke-width="8" stroke-linecap="round" stroke-dasharray="180 10"/>
-          <path d="M0 -36 L0 -46" stroke="url(#logoGreenGrad)" stroke-width="6" stroke-linecap="round"/>
-        </g>
-        <text x="42" y="44" font-family="Inter, -apple-system, sans-serif" font-size="42" font-weight="600" fill="var(--text)" letter-spacing="-1.5">ney<tspan fill="url(#logoGreenGrad)" font-size="32" font-weight="500">&amp;</tspan>co</text>
-        <circle cx="176" cy="40" r="3" fill="url(#logoPurpleAccent)"/>
-      </svg>
+      <svg viewBox="0 0 210 90" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="fillGrad" x1="0%" y1="100%" x2="0%" y2="0%"><stop offset="0%" style="stop-color:#1FAD73"/><stop offset="55%" style="stop-color:#2ECC85"/><stop offset="55%" style="stop-color:transparent"/><stop offset="100%" style="stop-color:transparent"/></linearGradient>
+            <linearGradient id="strokeGrad" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#2ECC85"/><stop offset="100%" style="stop-color:#1FAD73"/></linearGradient>
+          </defs>
+          <g transform="translate(40, 45)"><circle cx="0" cy="0" r="32" fill="none" stroke="url(#strokeGrad)" stroke-width="7"/><circle cx="0" cy="0" r="24" fill="url(#fillGrad)"/></g>
+          <text x="82" y="52" font-family="Inter, system-ui, sans-serif" font-size="28" font-weight="600" fill="#ffffff" letter-spacing="-0.5">ney</text>
+          <text x="129" y="52" font-family="Inter, system-ui, sans-serif" font-size="21" font-weight="500" fill="url(#strokeGrad)">&amp;</text>
+          <text x="148" y="52" font-family="Inter, system-ui, sans-serif" font-size="28" font-weight="600" fill="#ffffff" letter-spacing="-0.5">co</text>
+          <circle cx="182" cy="48" r="4" fill="#6B4C9A"/>
+        </svg>
     </a>
-    <div style="display:flex;align-items:center;gap:12px;">
-      <button onclick="toggleTheme()" id="themeToggle" style="background:none;border:1px solid var(--border);border-radius:100px;padding:6px 12px;cursor:pointer;font-size:14px;color:var(--text-muted);transition:all 0.2s;" title="Toggle dark/light mode">🌙</button>
-    </div>
+    <ul class="nav-links">
+        <li><a href="https://oneyco.com.au">Home</a></li>
+        <li><a href="https://oneyco.com.au/about.html">About</a></li>
+        <li><a href="index.html" class="nav-active">Mentoring</a></li>
+        <li><a href="https://tools.oneyco.com.au">Tools</a></li>
+        <li><a href="https://fhc.oneyco.com.au">Health Check</a></li>
+      </ul>
   </div>
 
   <!-- Section 1: Hero -->
@@ -672,31 +655,15 @@
       📧 <a href="mailto:dong.m@oneyco.com.au">dong.m@oneyco.com.au</a>
     </div>
     <div class="footer-links">
-      <a href="https://oneyco.com.au" target="_blank">oneyco.com.au</a>
-      <a href="https://tools.oneyco.com.au" target="_blank">tools.oneyco.com.au</a>
-      <a href="https://fhc.oneyco.com.au" target="_blank">fhc.oneyco.com.au</a>
+      <a href="https://oneyco.com.au">Home</a>
+      <a href="https://oneyco.com.au/about.html">About</a> · <a href="https://tools.oneyco.com.au">Tools</a>
+      <a href="https://fhc.oneyco.com.au">Health Check</a> · <a href="https://mentor.oneyco.com.au">Mentoring</a>
     </div>
     <p>© 2026 Oney & Co. All rights reserved.</p>
   </footer>
 
   <script>
-    // ==================== THEME ====================
-    function toggleTheme() {
-      const html = document.documentElement;
-      const isDark = html.getAttribute('data-theme') === 'dark';
-      html.setAttribute('data-theme', isDark ? 'light' : 'dark');
-      document.getElementById('themeToggle').textContent = isDark ? '🌙' : '☀️';
-      document.querySelector('meta[name="theme-color"]').content = isDark ? '#f8f7fc' : '#0a0a0a';
-      localStorage.setItem('mentor-theme', isDark ? 'light' : 'dark');
-    }
-    (function() {
-      const saved = localStorage.getItem('mentor-theme');
-      if (saved === 'dark' || (!saved && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-        document.documentElement.setAttribute('data-theme', 'dark');
-        document.getElementById('themeToggle').textContent = '☀️';
-        document.querySelector('meta[name="theme-color"]').content = '#0a0a0a';
-      }
-    })();
+    
 
     // ==================== TRIAGE TOOL ====================
     const TOTAL_STEPS = 6; // gate + 4 pillars + result
