update: 9 yrs, $200M+ commercial transactions

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <span class="hero-badge">For Mortgage Brokers</span>
     <h1>1 More Commercial Deal a Year</h1>
     <p class="subtitle">Learn to think like a banker. Structure deals that get approved.</p>
-    <p class="hero-credentials">🏦 8 years inside Australia's Big 4 banks (Westpac, NAB, St George) · $100M+ assessed · Business Banking specialist</p>
+    <p class="hero-credentials">🏦 9 years inside Australia's Big 4 banks (Westpac, NAB, St George) · $200M+ commercial transactions assessed</p>
     <a href="#triage" class="btn-cta">Try the Deal Triage Tool ↓</a>
   </section>
 
@@ -642,7 +642,7 @@
         <div>
           <div class="about-name">Mao Dong</div>
           <div class="about-role">Founder, Oney & Co</div>
-          <p class="about-bio">8 years inside Australia's Big 4 banks — Westpac, NAB, and St George — in Business Banking. Assessed over $100M in commercial lending. Now building tools and mentoring for the brokers who want to do more commercial deals with confidence.</p>
+          <p class="about-bio">9 years inside Australia's Big 4 banks — Westpac, NAB, and St George — in Business Banking. Assessed over $200M in commercial transactions. Now building tools and mentoring for the brokers who want to do more commercial deals with confidence.</p>
           <p class="about-quote">"Known for giving straight answers in 5 minutes, not 5 weeks."</p>
         </div>
       </div>
